# accessto

./: .gitignore  pyproject.toml  readme.md
accessto/: access_opportunities.py  matrix.py
example_notebooks/hexagonal_grid_example/: 1-- create_hexagonal_grid.ipynb  2--read_DineSafe_opendata.ipynb  3--calculate_access_to_grocery_stores.ipynb  description.md
example_notebooks/osm/: find_osm_points_of_interest.ipynb
example_notebooks/otp/: run_otp_on_testdata.ipynb
src/accessto/: __init__.py  access_opportunities.py  enumerations.py  matrix.py  otp2_travel_time_computer.py  points.py  r5py_travel_time_computer.py  utilities.py
src/accessto/travel_costs/: __init__.py  otp2.py
tests/: test_access_to_opportunities.py  test_integration_otp2.py  test_integration_r5py  test_integration_r5py copy  test_matrix.py  test_otp2.py  test_points.py  test_r5py.py
tests/test_data/matrix/: small_matrix.csv
tests/test_data/network/: queensway_test.osm.pbf
tests/test_data/points/: small_destinations.csv  small_origins.csv  small_origins_newid.csv  unconnected_destinations.csv
tests/travel_costs/: test_otp2.py
