[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0.0", "wheel"]

[project]
name = "accessto"
version = "0.01"
authors = [
    {name="Bryce Sharman"}
]
description = "Access to Opportunities Calculator"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "License :: OSI Approved || MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = ["requests", "r5py"]
keywords = ["accessibility", "transport"]
[project.urls]
homepage = "https://github.com/bryce-sharman/accessto"

